crimson/os/seastore: use different segment seq allocator from journal and ool segments

Fixes: https://tracker.ceph.com/issues/55143
Signed-off-by: Xuehan Xu <xxhdx1985126@gmail.com>