src/test/crimson/seastore/test_btree_lba_manager.cc
@@ -42,7 +42,7 @@ struct btree_test_base :
   btree_test_base() = default;
 
   std::map<segment_id_t, segment_seq_t> segment_seqs;
-
+  std::map<segment_id_t, segment_type_t> segment_types;
 
 
   seastar::lowres_system_clock::time_point get_last_modified(
@@ -59,18 +59,23 @@ struct btree_test_base :
   segment_id_t get_segment(
     device_id_t id,
     segment_seq_t seq,
-    segment_type_t) final
+    segment_type_t type) final
   {
     auto ret = next;
     next = segment_id_t{
       next.device_id(),
       next.device_segment_id() + 1};
     segment_seqs[ret] = seq;
+    segment_types[ret] = type;
     return ret;
   }
 
   segment_seq_t get_seq(segment_id_t id) {
     return segment_seqs[id];
+  }
+
+  segment_type_t get_type(segment_id_t id) {
+    return segment_types[id];
   }
 
   journal_seq_t get_journal_tail_target() const final { return journal_seq_t{}; }
